# C0Compiler

./: C0.cabal  README.md
Testes/: test1.txt  test2.txt  test3.txt  teste4.txt  teste5.txt
src/: Interm.hs  LexerC0.x  MCode.hs  Main.hs  ParserC0.y
