name:                parserC0
version:             0.1.0.0
synopsis:            C0
description:         C0
author:              Francisco Ribeiro && Amadeu Marques
maintainer:          up201805092@fc.up.pt && up201804974@fc.up.pt
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable C0Compiler
  main-is:             Main.hs
  other-modules:       LexerC0, ParserC0, Interm
  build-tools:         alex, happy, Haskell2010
  build-depends:       base, array, containers, mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
